Added more information about the menus

--- a/Orrery.mw
+++ b/Orrery.mw
@@ -85,6 +85,7 @@ bottom left of the display.
 When not in fullscreen mode, three menus are displayed at the bottom of
 the screen.
 
+===Time===
 The time menu allows you to specify an
 explicit time between 3000 BC and 3000 AD, or the current
 time.   If current time is selected, the display updates
@@ -92,21 +93,24 @@ automatically once per minute.   If a specific time is selected,
 it is shown in red, to remind you that the display is not
 going to update automatically as time passes.
 
+=== Place ===
 The place menu allows you to select the GPS-derived location,
 a user specified latitude and longitude, or a city or
 astronomical observatory selected from a menu.   The lists of
 locations are stored in ASCII text files under the menus subdirectory
 of the program installation area on your phone.   You may
-save your selected location, so you need not reset it the
+save your selected location, by hitting the "Save
+to Configuration File" button, so it will be used the
 next time you start the orrery.   If you would like
 to add additional cities etc to one of the menus, you may simply
 edit one of the menu files, and add the name, latitude and longitude
 of the location.   You will need to restart the orrery program for
 your new locations to become available.
 
+=== Display ===
 The display menu allows you to configure the display, selecting
-such things as the lowest magnitude displayed, constellation
-lines, whether or not star names are displayed, etc.
+such things as the faintest magnitude object displayed, whether constellation
+lines are plotted, whether or not star names are displayed, etc.
 
 == Symbols ==
 === Planet Symbols ===
