--- a/Om_2008_keyboard.mw
+++ b/Om_2008_keyboard.mw
@@ -34,6 +34,12 @@ Note that to delete a character inside the input box, the word guessing box need
 
 If you hover your finger (or stylus) over a letter for more than 2 seconds a magnifiying glass, or zoom mode is displayed that allows you to see the letter you are selecting. This also overrides the prediction feature for this letter, so you can type specific letters with this method.
 
+= Customizations =
+
+This keyboard doesn't suit all users. For a description of alternative solutions and potential workarounds, see [[Keyboard Debate]].
+
+Also, bellow are some customizations/tweaks/hacks proposed by some users :
+
 == Reactivating The Keyboard Toggle ==
 Most applications should bring up the keyboard automatically when keyboard input is required, however, advanced users can activate a small 'qwerty' button which can manually toggle the keyboard on and off.  See the [[Keyboard_Toggle|keyboard toggle tutorial]] for more information.
 
