--- a/Om_2008_keyboard.mw
+++ b/Om_2008_keyboard.mw
@@ -36,9 +36,17 @@ If you hover your finger (or stylus) over a letter for more than 2 seconds a mag
 
 = Customizations =
 
-This keyboard doesn't suit all users. For a description of alternative solutions and potential workarounds, see [[Keyboard Debate]].
+As it behaves in the shipped 2008.8 state, this keyboard doesn't suit all users.
 
-Also, bellow are some customizations/tweaks/hacks proposed by some users :
+== Debate ==
+
+Some people don't like this keyboard, because it lacks a full Qwerty keyboard. Another issue people have, is they can't switch the keyboard prediction off.
+
+For a description of alternative solutions and potential workarounds, see [[Keyboard Debate]].
+
+{{main|Keyboard_Debate}}
+
+Also, bellow are some (more ?) customizations/tweaks/hacks proposed by some users :
 
 == Reactivating The Keyboard Toggle ==
 Most applications should bring up the keyboard automatically when keyboard input is required, however, advanced users can activate a small 'qwerty' button which can manually toggle the keyboard on and off.  See the [[Keyboard_Toggle|keyboard toggle tutorial]] for more information.
@@ -62,10 +70,6 @@ If you have problems with illume crashing, make sure that you don't have a copy 
 
 To turn off predictive mode just put ''export QTOPIA_NO_VIRTUAL_KEYBOARD=1'' into  ''/etc/X11/Xsession.d/89qtopia''
 
-
-== Debate ==
-Some people doesn't like this keyboard, because it lacks a full Qwerty keyboard. Another issue people have, is they can't switch the keyboard prediction off.
-{{main|Keyboard_Debate}}
 
 [[Category:Om 2008.8]]
 [[Category:Guides|Keyboard Om 2008.8]]
