*Empty MediaWiki Message*

--- a/Mac_OS_X.mw
+++ b/Mac_OS_X.mw
@@ -1,6 +1,6 @@
 Being primarily a Linux based project, the host platform of choice is Linux. However, it is entirely possible to work with Openmoko and Neo handsets using MacOS X, as you'll soon see.
 
-There are actually two ways of working with Openmoko and MacOS X. One is simply to run ubuntustudio on parallels, in which case you would then follow the instructions for Linux, and Ubuntu in particular.
+There are actually two ways of working with Openmoko and MacOS X. One is simply to run ubuntustudio on parallels (or your favourite debian in your favourite virtual machine), in which case you would then follow the instructions for Linux, and Ubuntu in particular.
 
 On the other hand, if you wish to use MacOS X directly, please continue:
 
