*Empty MediaWiki Message*

--- a/Biking.mw
+++ b/Biking.mw
@@ -40,6 +40,10 @@ Linear regulator above might be replaced with [http://www.dimensionengineering.c
 * [http://wiki.openstreetmap.org/index.php/Rana Rana] uses [[Installing Pyroute|Pyroute]]
 * [http://www.neo1973-germany.de/wiki/pylgrim pylgrim] bitmap map viewer. Dead.
 
+== Heart Rate Monitor ==
+
+According to [http://www.mail-archive.com/community@lists.openmoko.org/msg11248.html mailing list discussions] some heart rate monitors use [http://thisisant.com/index.php?section=5 ANT]. Due to the modern chip cases building a reliable homemade receiver seems to be difficult.
+
 == See also ==
 
 * http://wiki.openmoko.org/wiki/GPS_applications
