--- a/Mac_OS_X.mw
+++ b/Mac_OS_X.mw
@@ -294,7 +294,10 @@ NOTE: the ssh daemon (dropbear 0.49) on the Openmoko appears to have a bug when 
 To Be Done.
 
 == X11 ==
-Launch Apple X11. xhost +192.168.0.202. On the Neo: export DISPLAY=192.168.0.200:0.0
+Launch Apple X11.
+ xhost +192.168.0.202.
+On the Neo:
+ export DISPLAY=192.168.0.200:0.0
 
 == Synchronizing ==
 {{InProgress}}
