/* List of keyboard-related Howtos */ Addition of a new proposal

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -46,6 +46,8 @@ How to toggle the predictive mode on and off ?
 
 How to turn off Qtopia keyboard ? According to [http://docs.openmoko.org/trac/ticket/1864| Comment on ticket 1864]: You can put "export QTOPIA_NO_VIRTUAL_KEYBOARD=1" into  /etc/X11/Xsession.d/89Qtopia and qpe will not instantiate a virtual keyboard and illume's keyboard should be shown. Another option involves [http://n2.nabble.com/preserving-illume-keyboard-on-update-tp778734p778919.html patching and recompiling qpe].
 
+How to make Qtopia keyboards and illume/raster keyboard coexist ?
+
 == Your short-term options ==
 [[Image:Assume_good_faith_lolcat.jpg|thumb|Even if things might look bad, you shouldn't assume that they are]]
 
