--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -2630,6 +2630,30 @@ Due to common customs problems we created google group to discuss how to get tha
 | 1
 |}
 
+=== Samara ===
+
+{| border="1"
+|rowspan=2| login
+|rowspan=2| google groups name
+| colspan="3"| number of items
+|-
+| Neo FreeRunner
+| Dboard
+| Spares Pack
+|-
+| 1. [[Special:Emailuser/rbsergiy|rbsergiy]]
+| rbsergiy
+| 1 (P5.3)
+| 0
+| 0 
+|-
+|Total number:
+|
+| 1 
+| 0
+| 0 
+|}
+
 == Singapore ==
 Status : 5/10
 * Wee Kiam Peng [http://wiki.openmoko.org/wiki/Special:Emailuser/Jipi Contact]
