--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -2630,7 +2630,7 @@ Due to common customs problems we created google group to discuss how to get tha
 | 1
 |}
 
-=== Samara ===
+=== Novosibirsk ===
 
 {| border="1"
 |rowspan=2| login
