/* List of keyboard-related Howtos */ Improving layout, and some details

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -34,19 +34,37 @@ The vkbd system.
 
 == List of keyboard-related Howtos ==
 
-[[Om_2008.8_Keyboard| How to use the Qtopia keyboard]] shipped with Om 2008.8 ?
+=== How to use the Qtopia keyboard shipped with Om 2008.8 ? ===
 
-How to have a toggle button to make the keyboard appear/disappear ? ([[Keyboard Toggle|here ?]])
+See [[Om_2008.8_Keyboard| How to use the Qtopia keyboard]].
 
-How to change the keyboards layout ?
+=== How to have a toggle button to make the keyboard appear/disappear ? 
 
-How to change the dictionary used by the predictive keyboards ?
+[[Keyboard Toggle|here ?]]
 
-How to toggle the predictive mode on and off ?
+=== How to change the keyboards layout ? ===
 
-How to turn off Qtopia keyboard ? According to [http://docs.openmoko.org/trac/ticket/1864| Comment on ticket 1864]: You can put "export QTOPIA_NO_VIRTUAL_KEYBOARD=1" into  /etc/X11/Xsession.d/89Qtopia and qpe will not instantiate a virtual keyboard and illume's keyboard should be shown. Another option involves [http://n2.nabble.com/preserving-illume-keyboard-on-update-tp778734p778919.html patching and recompiling qpe].
+TBD
 
-How to make Qtopia keyboards and illume/raster keyboard coexist ?
+=== How to change the dictionary used by the predictive keyboards ? ===
+
+TBD
+
+=== How to toggle the predictive mode on and off ? ===
+
+TBD
+
+=== How to "turn off" Qtopia keyboard ? ===
+
+By default, if illume keyboard is installed, it will compete with the qtopia one with non-predictable results on which one is displayed on top (correct me if I'm wrong).
+
+According to [http://docs.openmoko.org/trac/ticket/1864| Comment on ticket 1864]: You can put "export QTOPIA_NO_VIRTUAL_KEYBOARD=1" into  /etc/X11/Xsession.d/89Qtopia and qpe will not instantiate a virtual keyboard and illume's keyboard should be shown. 
+
+Another option involves [http://n2.nabble.com/preserving-illume-keyboard-on-update-tp778734p778919.html patching and recompiling qpe].
+
+=== How to make Qtopia keyboards and illume/raster keyboard coexist ? ===
+
+TBD
 
 == Your short-term options ==
 [[Image:Assume_good_faith_lolcat.jpg|thumb|Even if things might look bad, you shouldn't assume that they are]]
