/* How to use the Qtopia keyboard shipped with Om 2008.8 ? */

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -38,7 +38,7 @@ The vkbd system.
 
 See [[Om_2008.8_Keyboard| How to use the Qtopia keyboard]].
 
-=== How to have a toggle button to make the keyboard appear/disappear ? 
+=== How to have a toggle button to make the keyboard appear/disappear ? ===
 
 [[Keyboard Toggle|here ?]]
 
