--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -18,7 +18,7 @@ The [[Om2008.8_Keyboard|Qtopia keyboard]] build-in Om 2008.8. See also the [[htt
 
 === Matchbox keyboard ===
 
-The [[Switching_Keyboards_on_OM_2007.2#What_does_the_keyboard_look_like.3F|matchbox keyboard]]. [[Image:Complete_QWERTY_Keyboard_On_The_Freerunner_screenshot.png|none|thumb|260px|Screenshot of the keyboard applet]]
+The [[Switching_Keyboards_on_OM_2007.2#What_does_the_keyboard_look_like.3F|matchbox keyboard]]. [[Image:Complete_QWERTY_Keyboard_On_The_Freerunner_screenshot.png|none|thumb|260px|Screenshot of the keyboard applet on 2007.2]]
 
 === Illume keyboard ===
 
