/* Heart Rate Monitor */

--- a/Biking.mw
+++ b/Biking.mw
@@ -44,6 +44,9 @@ Linear regulator above might be replaced with [http://www.dimensionengineering.c
 
 According to [http://www.mail-archive.com/community@lists.openmoko.org/msg11248.html mailing list discussions] some heart rate monitors use [http://thisisant.com/index.php?section=5 ANT]. Due to the modern chip cases building a reliable homemade receiver seems to be difficult.
 
+=== HRM Links ===
+* http://www.mikrocontroller.net/articles/Pulsuhrempf%C3%A4nger_mit_AVR_Butterfly German Microcontroller Wiki. Circuit diagram and DSP Simulation.
+
 == See also ==
 
 * http://wiki.openmoko.org/wiki/GPS_applications
