*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -322,6 +322,7 @@ __NOTOC__
 *[[Boot from sd card]]
 *[[Charging battery directly]]
 ====Software Documentation====
+*[[Keyboard Debate]]
 *[[Games]]
 *[[Biking]]
 *[[Illume]]
