--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -89,11 +89,21 @@ Any problems with the software below should be reported to the individual softwa
 :Distribution:[[Om2007.2]]
 
 |}
+{| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; width:80%;floating="center"; "
+! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:15% " |
+[[Image:Openmoko mail.png|150px|center]]
+! style="background:#ffffcc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:85% " align=left|
+:'''[[Orrery]]'''<br>
+:Orrery displays the objects in the night (or day) sky.  It uses the GPS position, if available.
+
+:Download here:[https://projects.openmoko.org/projects/openmoko-mail/ project in projects.openmoko.org]
+
+:Distribution:[[Om2007.2]]
+
+|}
 
 
 
-'''[[Orrery]]'''<br>
-Orrery displays the objects in the night (or day) sky.  It uses the GPS position, if available.
 
 {| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; width:80%;floating="center"; "
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:15% " |
