--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -16,7 +16,7 @@ Any problems with the software below should be reported to the individual softwa
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:15% " |
 [[Image:Minimo-slashdot.jpeg|150px|center]]
 ! style="background:#ffffcc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:85% " align=left|
-:'''[[Minimo]]'''<br>
+:[[Minimo]]<br>
 
 :Minimo is a Mozilla based web browser. It features full AJAX support and other goodies. It is listed as an alternative to the standard Webkit based browser.
 
