*Empty MediaWiki Message*

--- a/Gpe-scap.mw
+++ b/Gpe-scap.mw
@@ -1,3 +1,5 @@
+{{applications}}
+
 {| align="right"
   | __TOC__
   |}
@@ -30,3 +32,5 @@ Some versions of gpe-scap are unable to save or upload PNG files, due to a wrong
 <pre>
 ln -s /lib/libc.so.6 /lib/libc.so
 </pre>
+
+[[Category:Applications]]
