--- a/Gpsdrive.mw
+++ b/Gpsdrive.mw
@@ -1,4 +1,7 @@
 {{Languages|Gpsdrive}}
+
+{{applications}}
+
 [[GPS_Applications]]
 
 GpsDrive is a car (bike, ship, plane) navigation system. GpsDrive displays your position provided from your GPS receiver on a zoomable map. The maps are autoselected for best resolution depending of your position and can be downloaded from the Internet. Speech output is supported if the "festival" software is running. All GPS receivers supported by gpsd should be usable.
@@ -16,3 +19,5 @@ opkg install gpsdrive-maps
 /usr/share/gpsdrive/map_koord.txt
 DISPLAY=:0 gpsdrive -r 640 -s 480 -1
 </pre>
+
+[[Category:Applications]]
