*Empty MediaWiki Message*

--- a/Accessories.mw
+++ b/Accessories.mw
@@ -8,6 +8,7 @@ This is a list of some accessories for [[Neo 1973]] and [[Neo FreeRunner]].
 *[[Manually using Bluetooth#Being able to use HID devices|Bluetooth keyboards]]
 **[[FrogPad]]
 *[[InvisibleShield]]
+*[[Hspa-stick]]
 
 [[Category:Neo1973 Hardware]]
 [[Category:Neo FreeRunner Hardware]]
