/* Pages proposed for deletion */

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -94,6 +94,14 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 |[[Finger Scrolling]] and [[Talk:Finger Scrolling]] || Was only used in Om 2007.2 || [[User:Marko Knöbl|Marko Knöbl]]
 |-
 |[[Finger Toolbar]] and [[Talk:Finger Toolbar]] || Was only used in Om 2007.2 || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+|[[GPS Navigation]] and [[Talk:GPS Navigation]] || is already implemented: see [[GPS Applications]] || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+|[[GTA02v5]] || only contains links to deleted pages || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+|[[Guitar Tuning/de]] || english page was already deleted || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+|[[Hear Me FIC]], [[Talk:Hear Me FIC]] and [[Hear Me FIC/it]] || no new suggestions since July 2007 || [[User:Marko Knöbl|Marko Knöbl]]
 |}
 
 === Pages that especially need work === 
