--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -59,6 +59,20 @@ Any problems with the software below should be reported to the individual softwa
 |}
 
 
+{| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; width:80%;floating="center"; "
+! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #999999; width:15% " |
+[[Image:TangoGPS1.jpg|150px|center]]
+! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #999999; width:85% " align=left|
+:[[TangoGPS]]<br>
+:TangoGPS is a map application which can utilize Neo's built-in GPS to show your current location. 
+
+
+:Download here:[http://www.tangogps.org/downloads/tangogps_0.9.3-r1_armv4t.ipk TangoGPS]
+
+:Distribution:[[Om2008.8]]
+
+|}
+
 {{main|GPS applications}}
 
 === Other ===
