/* How to "turn off" Qtopia keyboard ? */

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -58,7 +58,7 @@ TBD
 
 By default, if illume keyboard is installed, it will compete with the qtopia one with non-predictable results on which one is displayed on top (correct me if I'm wrong).
 
-According to [http://docs.openmoko.org/trac/ticket/1864| Comment on ticket 1864]: You can put "export QTOPIA_NO_VIRTUAL_KEYBOARD=1" into  /etc/X11/Xsession.d/89qtopia and qpe will not instantiate a virtual keyboard and illume's keyboard should be shown. 
+According to [http://docs.openmoko.org/trac/ticket/1864 Comment on ticket 1864]: You can put "export QTOPIA_NO_VIRTUAL_KEYBOARD=1" into  /etc/X11/Xsession.d/89qtopia and qpe will not instantiate a virtual keyboard and illume's keyboard should be shown. 
 
 Another option involves [http://n2.nabble.com/preserving-illume-keyboard-on-update-tp778734p778919.html patching and recompiling qpe].
 
