*Empty MediaWiki Message*

--- a/Neo_FreeRunner_Hardware.mw
+++ b/Neo_FreeRunner_Hardware.mw
@@ -1,16 +1,22 @@
 {{Languages|Neo FreeRunner GTA02 Hardware}}
 __NOTOC__
-__NOEDITSECTION__
+
 {{gta02menu}}
+
+<gallery>
+Image:Gta02a5 pcba cs.JPG|component (back) side NOTE: GTA02 A5 PCBA Component Side photo
+Image:Gta02a5 pcba ps.JPG|display (top) side NOTE: GTA02 A5 PCBA Print Side photo
+Image:GTA02 A5 PCB CS.jpg|component (back) side NOTE: GTA02 A5 PCB Component Side photo
+Image:GTA02 A5 PCB PS.jpg|display (top) side NOTE: GTA02 A5 PCB Print Side photo
+Image:SimpleComponentDiagram.jpg|Simplified Hardware Component Diagram
+</gallery>
+
+
 [[Openmoko]] is a software distribution stack that sits on top of a [[hardware]] platform.  The [[Neo FreeRunner]] phone is the second hardware platform to take advantage of Openmoko.  You can find specifications of the hardware by reviewing this introduction page and the pages in the category as shown at the bottom of this page.
 
 <!-- {{note|This page is about hardware that is currently in '''design/prototype''' phase, changes are frequent}} -->
 
-[[Image:Gta02a5 pcba cs.JPG|thumb|400px|display (top) side NOTE: GTA02 A5 PCBA Component Side photo]]
-[[Image:Gta02a5 pcba ps.JPG|thumb|400px|component (back) side NOTE: GTA02 A5 PCBA Print Side photo]]
-[[Image:GTA02 A5 PCB CS.jpg|thumb|400px|component (back) side NOTE: GTA02 A5 PCB Component Side photo]]
-[[Image:GTA02 A5 PCB PS.jpg|thumb|400px|component (back) side NOTE: GTA02 A5 PCB Print Side photo]]
-[[Image:SimpleComponentDiagram.jpg|thumb|400px|Simplified Hardware Component Diagram]]
+
 
 =Summary=
 Openmoko, Inc. is building a Linux based smart phone with full GPL compatible firmware source code for Openmoko, project code named GTA02 (Neo FreeRunner).
