--- a/Automatic_emulation_in_Ubuntu.mw
+++ b/Automatic_emulation_in_Ubuntu.mw
@@ -278,3 +278,12 @@ This is not look like as Openmoko on screens:
 
 [[Category:Technical]]
 [[Category:Documentation]]
+
+
+--[[User:David]] 12:57, 28 August 2008
+I have problems with the step no. 3:
+3. Download the above .jffs2 file (build the URL with the download_dir and the rootfs_wildcard values) to images/openmoko/
+the webpages:
+-[http://buildhost.openmoko.org/daily/neo1973/deploy/glibc/images/neo1973/]
+-[http://buildhost.openmoko.org/daily/neo1973/200807/20080706/]
+doesn't exist anymore..
