--- a/Orrery.mw
+++ b/Orrery.mw
@@ -138,7 +138,7 @@ disk and the celestial sphere.
 This program will run on either the neo1973 (gta01)
 or the Freerunner (gta02).   Users of the neo1973
 may wish to move the files to the microSD card, to
-save space in the limited builtin FLASH memory
+save space in the limited builtin flash memory
 (see below).
 
 === Supported Software Stacks ===
