--- a/GPS-Trail.mw
+++ b/GPS-Trail.mw
@@ -5,12 +5,9 @@ All that is required is a GPS with the ability to log tracks. (or other means of
 
 These tracks are later annotated using either personal knowledge, or notes taken at the time, to add roads, canals, or other features to the map. (They cannot be copied from commercial maps, as this is a breach of copyright and or terms and conditions).
 
-The Neo1973 GPS is quite adequate for this.
-
+The Neo1973 GPS  and the NeoFreeRunner GPS are quite adequate for this.
 
 This article defines the OpenStreetMap Application, an application designed for the Openmoko platform. This is a [[Look_%26_Feel#Native_Finger-Based | Native Finger-Based]] application.
-
-
 
 == Use Cases ==
 
