--- a/Om_2008_Installer.mw
+++ b/Om_2008_Installer.mw
@@ -5,7 +5,7 @@ The Openmoko Installer (Codename: [http://code.google.com/p/om-assassin/ Assassi
 
 {| class="wikitable" cellspacing="0" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; floating="center";width:100%; "
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:0px solid #222222; width:25% " |  
-[[Image:Install.png|200px|thumb|catogory]]
+[[Image:Install.png|200px|thumb|categories]]
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:0px solid #222222; width:25% " |
 [[Image:Install1.png|200px|thumb|choose program]]
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:0px solid #222222; width:25% " |
@@ -13,6 +13,7 @@ The Openmoko Installer (Codename: [http://code.google.com/p/om-assassin/ Assassi
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:0px solid #222222; width:25% " |
 [[Image:Om2008 installer2.png|200px|thumb|install application]]
 |}
+
 ==Install an Application ==
 '''Installer''' needs an internet connection to install applications for the repositories.  This can be done via WiFi (currently unstable), [http://svn.openmoko.org/developers/tick/Test_env_script_GTA02A5/setneo USB], [[GPRS]] or [[How_to_use_bluetooth_to_transfer_data_between_Neo_and_Desk-top|Bluetooth]].
 
