--- a/Om_2008_Installer.mw
+++ b/Om_2008_Installer.mw
@@ -131,3 +131,4 @@ For more information, refer to the reference section below.
 
 [[Category:Applications]]
 [[Category:Om 2008.8]]
+[[Category:Guides]]
