--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -40,7 +40,8 @@ See [[Om_2008.8_Keyboard| How to use the Qtopia keyboard]].
 
 === How to have a toggle button to make the keyboard appear/disappear ? ===
 
-[[Keyboard Toggle|here ?]]
+Short answer: ''opkg install illume-config''.
+Long answer: [[Keyboard Toggle|here]].
 
 === How to change the keyboards layout ? ===
 
