*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_Bern.mw
+++ b/Openmoko_Local_Groups:_Bern.mw
@@ -32,11 +32,12 @@
 |[[Image: Moko.jpg|center]](freerunner)
 |
 |
-|-|...
+|-
+|Richard Sademach
 |
 |
-|
-|
+|Bern
+|[[Image: Moko.jpg|center]](freerunner)
 |
 |
 |}
