/* List of keyboard-related Howtos */

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -36,12 +36,25 @@ The vkbd system.
 
 === How to use the Qtopia keyboard shipped with Om 2008.8 ? ===
 
-See [[Om_2008.8_Keyboard| How to use the Qtopia keyboard]].
+Summary:
+* Slide finger left = backspace.
+* Slide finger right = space.
+* Slide finger up/down = changes between lowercase/uppercase/numbers/special characters.
+* The 'Enter' key is bottom right on the special characters page
+* Hovering over a letter for more than 2 seconds activates zoom mode, allowing you to type specific letters without prediction. 
+Detailed version: see [[Om_2008.8_Keyboard| How to use the Qtopia keyboard]].
+
+[edit] 
 
 === How to have a toggle button to make the keyboard appear/disappear ? ===
 
 Short answer: ''opkg install illume-config''.
 Long answer: [[Keyboard Toggle|here]].
+
+=== How to install the matchbox keyboard ? ===
+
+Short answer: ''opkg install matchbox-keyboard-applet matchbox-keyboard-inputmethod''
+Long answer: [[Switching_Keyboards|here]].
 
 === How to change the keyboards layout ? ===
 
