/* How to install the matchbox keyboard ? */

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -54,6 +54,10 @@ Long answer: [[Keyboard Toggle|here]].
 Short answer: ''opkg install matchbox-keyboard-applet matchbox-keyboard-inputmethod''
 Long answer: [[Switching_Keyboards|here]].
 
+=== How to install the illume (Raster's) keyboard ? ===
+
+Short answer (theoretical): wait until the ''illume-config-illume'' package arrives in the repository, then install it with ''opkg''.
+
 === How to change the keyboards layout ? ===
 
 TBD
