--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -58,6 +58,17 @@ Long answer: [[Switching_Keyboards|here]].
 
 Short answer (theoretical): wait until the ''illume-config-illume'' package arrives in the repository, then install it with ''opkg''.
 
+=== How to "turn off" Qtopia keyboard ? ===
+
+Short answer: Add the line ''export QTOPIA_NO_VIRTUAL_KEYBOARD=1'' into the file ''/etc/X11/Xsession.d/89qtopia''.
+
+By default, if both the illume and the qtopia keyboards are installed, they will compete with non-predictable results on which one is displayed on top.
+
+References:
+[http://docs.openmoko.org/trac/ticket/1864 Comment on ticket 1864]
+[http://n2.nabble.com/preserving-illume-keyboard-on-update-tp778734p778919.html Patching and recompiling qpe].
+
+
 === How to change the keyboards layout ? ===
 
 TBD
@@ -69,14 +80,6 @@ TBD
 === How to toggle the predictive mode on and off ? ===
 
 TBD
-
-=== How to "turn off" Qtopia keyboard ? ===
-
-By default, if illume keyboard is installed, it will compete with the qtopia one with non-predictable results on which one is displayed on top (correct me if I'm wrong).
-
-According to [http://docs.openmoko.org/trac/ticket/1864 Comment on ticket 1864]: You can put "export QTOPIA_NO_VIRTUAL_KEYBOARD=1" into  /etc/X11/Xsession.d/89qtopia and qpe will not instantiate a virtual keyboard and illume's keyboard should be shown. 
-
-Another option involves [http://n2.nabble.com/preserving-illume-keyboard-on-update-tp778734p778919.html patching and recompiling qpe].
 
 === How to make Qtopia keyboards and illume/raster keyboard coexist ? ===
 
