/* How to "turn off" Qtopia keyboard ? */

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -58,16 +58,13 @@ Long answer: [[Switching_Keyboards|here]].
 
 Short answer (theoretical): wait until the ''illume-config-illume'' package arrives in the repository, then install it with ''opkg''.
 
-=== How to "turn off" Qtopia keyboard ? ===
+=== How to turn off the Qtopia keyboard ? ===
 
 Short answer: Add the line ''export QTOPIA_NO_VIRTUAL_KEYBOARD=1'' into the file ''/etc/X11/Xsession.d/89qtopia''.
 
-By default, if both the illume and the qtopia keyboards are installed, they will compete with non-predictable results on which one is displayed on top.
-
-References:
-[http://docs.openmoko.org/trac/ticket/1864 Comment on ticket 1864]
-[http://n2.nabble.com/preserving-illume-keyboard-on-update-tp778734p778919.html Patching and recompiling qpe].
-
+Warning: Even when you install another keyboard, if you do not turn off the Qtopia keyboard it will come back on the top <strike>to bite you trollishly</strike>. References:
+[http://docs.openmoko.org/trac/ticket/1864 Comment on ticket 1864], and untested proposed
+[http://n2.nabble.com/preserving-illume-keyboard-on-update-tp778734p778919.html patch to qpe].
 
 === How to change the keyboards layout ? ===
 
