--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -85,10 +85,11 @@ TBD
 == Your short-term options ==
 [[Image:Assume_good_faith_lolcat.jpg|thumb|Even if things might look bad, you shouldn't assume that they are]]
 
-* Live with it, let go (for a while) the desire to use the terminal locally, login remotely via ssh when you need.
+* Turn off the Qtopia keyboard and install the matchbox one instead.
+* Keep the Qtopia keyboard, let go (for a while) the desire to use the terminal locally, login remotely via ssh when you need.
 * Get an external keyboard, USB or Bluetooth, light and foldable if you want.
 * Switch to 2007.2 (but then similar issues arise : [[Switching Keyboards on Om 2007.2]]), FSO or Debian.
-* Recompile Qtopia and provide a package.
+* Patch Qtopia so that it plays nice with other keyboards, send upstream, meanwhile recompile and provide a package.
 PS: Complaining that management does not listen to the users needs is not a productive option.
 
 == Perspectives for long-term resolution ==
