--- a/Libframeworkd-glib.mw
+++ b/Libframeworkd-glib.mw
@@ -16,6 +16,10 @@ Today (August 7th), libframeworkd-glib almost implements the whole GSM stack fro
 
 You can find the sources on the [https://projects.openmoko.org/projects/shr/ SHR project page].
 
+Or, use clone the git repository:
+
+git clone git://git.freesmartphone.org/libframeworkd-glib.git
+
 = Example =
 
 ophonekitd is a simple example on how to use libframeworkd-glib to listen to events on frameworkd, and then launch the appropriate UI. It handles, in SHR, the whole "call" UI.
