--- a/Libframeworkd-glib.mw
+++ b/Libframeworkd-glib.mw
@@ -18,7 +18,9 @@ You can find the sources on the [https://projects.openmoko.org/projects/shr/ SHR
 
 Or, use clone the git repository:
 
+<pre>
 git clone git://git.freesmartphone.org/libframeworkd-glib.git
+</pre>
 
 = Example =
 
