--- a/Download.mw
+++ b/Download.mw
@@ -36,29 +36,16 @@ There are no builds yet
 === Daily "testing" and "unstable" official repositories ===
 
 See [http://lists.openmoko.org/pipermail/community/2008-August/027997.html "Repository and Images" announcement] for details on other "Base image", "testing" and "unstable".
+== howto ==
 
-==== Unofficial builds by zecke ====
-
-''May need to be removed since testing/unstable are official now ?''
-
-[http://wiki.openmoko.org/wiki/Om_2008.8_Guide#Unofficial_.28zecke.29_Updates howto]
+Create /etc/opkg/testing.conf
 <pre>
-development/unstable trees:
-	http://people.openmoko.org/~zecke/om2008.8-dev/all
-	http://people.openmoko.org/~zecke/om2008.8-dev/armv4t
-	http://people.openmoko.org/~zecke/om2008.8-dev/i686
-	http://people.openmoko.org/~zecke/om2008.8-dev/neo1973
-	http://people.openmoko.org/~zecke/om2008.8-dev/om-gta02
-
-testing feeds:
-	http://people.openmoko.org/~zecke/om2008.8-testing/all
-	http://people.openmoko.org/~zecke/om2008.8-testing/armv4t
-	http://people.openmoko.org/~zecke/om2008.8-testing/i686
-	http://people.openmoko.org/~zecke/om2008.8-testing/neo1973
-	http://people.openmoko.org/~zecke/om2008.8-testing/om-gta02
+src/gz testing-all http://downloads.openmoko.org/repository/testing/all
+src/gz testing-arm http://downloads.openmoko.org/repository/testing/armv4t
+src/gz testing-i686 http://downloads.openmoko.org/repository/testing/i686
+src/gz testing-neo http://downloads.openmoko.org/repository/testing/neo1973
+src/gz testing-gta02 http://downloads.openmoko.org/repository/testing/om-gta02
 </pre>
-
-More details from http://lists.openmoko.org/pipermail/community/2008-August/026491.html
 
 === Om 2007.2 images (GTK) ===
 {{Main|Om 2007.2}}
