--- a/Download.mw
+++ b/Download.mw
@@ -36,7 +36,7 @@ There are no builds yet
 === Daily "testing" and "unstable" official repositories ===
 
 See [http://lists.openmoko.org/pipermail/community/2008-August/027997.html "Repository and Images" announcement] for details on other "Base image", "testing" and "unstable".
-== howto ==
+==== howto ====
 
 Create /etc/opkg/testing.conf
 <pre>
