--- a/Neo_FreeRunner_Battery.mw
+++ b/Neo_FreeRunner_Battery.mw
@@ -64,4 +64,5 @@ It is probably a good idea to check that your battery is not greater than the st
 == USB charger ==
 {{main|USB charger}}
 
+[[Category:Battery]]
 [[Category:Neo FreeRunner Hardware]]
