--- a/Neo_FreeRunner_Battery.mw
+++ b/Neo_FreeRunner_Battery.mw
@@ -62,6 +62,8 @@ It is probably a good idea to check that your battery is not greater than the st
 |}
 
 == USB charger ==
+
+For information about USB battery chargers that can be used with the Neo FreeRunner see
 {{main|USB charger}}
 
 [[Category:Battery]]
