note on boot without battery

--- a/Neo_FreeRunner_Battery.mw
+++ b/Neo_FreeRunner_Battery.mw
@@ -17,7 +17,10 @@ Battery life is a work in progress. The power saving software is in a very rudim
  the internal charging circuitry can not be turned on until the FreeRunner has 
  booted, and booting through USB power alone does not work.
  (If you have the newest kernel images, you should be safe due to a software fix.)
+
+Actually this isn't true for all FreeRunner devices, I got flawless boot on GTA02 DateCode 20080626, when holding AUX while insering USB-plug of Wallwart powersupply.<br>Also I don't see how new kernel image could help on this issue, other than if it stopped DIScharging of battery in time<br><br>
 Should the battery become  completely discharged, your options are: 
+* Try booting with Wallwart USB-powersupply (maybe hold AUX during inserting USB-plug)
 * Use external stand-alone charger (compatible with the Nokia BL-5C battery) 
 * Boot the FreeRunner with an alternative battery, or with a spare GTA01 or GTA02 battery, plug USB power, then switch to the empty battery. 
 * Boot the FreeRunner with a 4.5VDC external power source (steady hand and great care involved), plug USB power, then insert the empty battery.
