ajouts et modifs pour être plus proche de la page EN

--- a/Om_2008.8%2Ffr.mw
+++ b/Om_2008.8%2Ffr.mw
@@ -3,11 +3,17 @@
 
 {{Distributions|Om 2008.8}}
 
-=Introduction=
+==Introduction==
 
 '''Om 2008.8''' est le successeur de [[Om 2007.2]] et son nom de code est '''ASU'''. Cette version a été [http://list.openmoko.org/pipermail/community/2008-August/025619.html lancée] le '''8 août 2008'''. Om 2008.8 utilise le démarreur EFL, diverses applications utilisateurs personnalisées et [[QtopiaOnX11|Qtopia sur X11]] pour la téléphonie. Il s'agit du premier pas de GTK+ sur X11 pour utiliser une multitude de suites d'outils en collaboration. '''Om 2008.8''' supporte maintenant des applications [http/enlightenment.org EFL], [http://trolltech.com/products/qtopia Qtopia] et [http://www.gtk.org GTK+].
 
 ''Pour voir comment tout a débuté, rendez-vous à la'''  [[Om2008.8 Feature Plan|liste caractéristiques de Om 2008.8]].
+
+
+== Quoi de neuf ==
+Comparé à Om2007.2 qui a eu un développement plus long, Om 2008.8 est une version majeure ".0" mais pas dans le sens "Linux 2.6.23" faisant suite à "Linux 2.6.22". On peut comparer Om2007.2 et Om2008.8 à KDE 3.5 (stable) et KDE 4.0 (incomplet mais au développement intensif).
+Si vous voulez le niveau de stabilité requis pour utiliser le FreeRunner comme téléphone principal, il est recommandé de garder Om2007.2 dans la mémoire flash du téléphone et de tester Om 2008.8 sur la carte microSD amovible.
+
 
 {| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; width:100%;floating="center"; "
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:25% " |
@@ -30,23 +36,6 @@
 [[Image:List.png|200px|center]]
 |}
 
-== Quoi de neuf ==
-Comparé à Om2007.2 qui a eu un développement plus long, Om 2008.8 est une version majeure ".0" mais pas dans le sens "Linux 2.6.23" faisant suite à "Linux 2.6.22". On peut comparer Om2007.2 et Om2008.8 à KDE 3.5 (stable) et KDE 4.0 (incomplet mais au développement intensif).
-Si vous voulez le niveau de stabilité requis pour utiliser le FreeRunner comme téléphone principal, il est recommandé de garder Om2007.2 dans la mémoire flash du téléphone et de tester Om 2008.8 sur la carte microSD amovible.
-
-<pre>
-De  : Openmoko
-A : liste de diffusion openmoko-community
-
-'''Om 2008.8''' a été créé pour être vide, afin d'offrir une vitrine pour vos idées.
-
-Pensez à vos créations comme des galeries. 
-Nous en construisons l'environnement. Chacune différente de la suivante. 
-Vous pourrez prendre la liberté d'imaginer la vôtre parce que nous voulons que vous ajoutiez votre touche. 
-Au choix : vous pouvez utiliser, créer ou les deux.
-
-Peu importe le chemin, vous créez à votre image. C'est à votre sujet.
-</pre>
 
 === Personnalisation ===
 
@@ -66,9 +55,9 @@ Vous pouvez utiliser '''Locations''' pour sauvegarder vos endroits préférés e
 Un guide pour connaître Om2008.8 : [[Om 2008.8 Guide]]
 A guide for getting to know Om 2008.8 : [[Om 2008.8 Guide|Guide Om 2008.8]]
 
-= Téléchargement =
+== Installation ==
 
-== Images Flash Om 2008.8 ==
+=== Images Flash Om 2008.8 ===
 
 '''Téléchargement d'images Om 2008.8'''
 
@@ -80,12 +69,12 @@ Ces images doivent être flashées dans la mémoire NAND du FreeRunner.
 
 * Pour les instructions sur comment flasher l'appareil, rendez-vous à : [[Flashing the Neo FreeRunner|Flasher le Neo FreeRunner]].
 
-== Alternative : exécution depuis une carte microSD ==
+=== Alternative : exécution depuis une carte microSD ===
 
 Vous pouvez installer cette distribution sur une carte microSD afin de pouvoir [[Boot from sd card|booter depuis une carte microSD]]. Les fichiers .tar sont disponibles [http://downloads.openmoko.org/releases/Om2008.8/ ici]. Cela permet de garder une autre distribution installée sur la mémoire NAND (pour tester 2008.8 tout en gardant 2007.2).
 
 
-= Problèmes connus =
+== Problèmes connus ==
 '''GSM'''
 
 * [http://docs.openmoko.org/trac/ticket/1662 Après x heures, le GSM ne fonctionne plus correctement]
@@ -131,6 +120,31 @@ Cela devrait résoudre la majeure partie de vos soucis de réseau. Si vous avez 
 
 * L'installeur n'a pas les droits administrateur, ce qui résulte en une impossibilité d'utiliser opkg. Solution : exécuter "killall packagekitd" (sur le FreeRunner ou lorsque vous y êtes connectés en ssh).
 
+
+== Mises à jours officielles pour Om 2008.8 "stable" ==
+
+Après la sortie de la version Om 2008.8 (le 08/08/2008), le développement de ASU/Om2008.8 est passé sur modèle inspiré de Debian avec trois branches : "stable", "testing" et "unstable" ([http://lists.openmoko.org/pipermail/community/2008-August/026491.html voir ce message] pour plus de details).
+
+les mises à jours officielles de la branche "stable" sont maintenant (26/08/2008) disponibles sous 2 formes (voir [http://lists.openmoko.org/pipermail/community/2008-August/027997.html ce message]) :
+* dans http://downloads.openmoko.org/repository/Om2008.8/ pour opkg (qui doit être déjà configuré dans 2008.8)
+* comme images de flash dans http://downloads.openmoko.org/releases/Om2008.8-update/
+
+
+== Dédicace ==
+
+<pre>
+De  : Openmoko
+A : liste de diffusion openmoko-community
+
+Om 2008.8 a été créé pour être vide, afin d'offrir une vitrine pour vos idées.
+
+Pensez à nos produits comme des galeries d'art. Nous en construisons l'environnement. 
+Chacune différente de la suivante. 
+Vous pourrez prendre la liberté d'imaginer la vôtre parce que nous voulons que vous ajoutiez votre touche. 
+Choisissez : vous pouvez utiliser, créer ou les deux.
+
+Peu importe le chemin, vous créez à votre image. C'est à votre sujet.
+</pre>
 
 [[Category:Openmoko/fr]]
 [[Category:Om 2008.8/fr]]
