*Empty MediaWiki Message*

--- a/TI_Calypso_D751992AZHH.mw
+++ b/TI_Calypso_D751992AZHH.mw
@@ -2,7 +2,7 @@
 * Feature: GSM/GPRS modem
 * PM Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-power_control.patch
 
-Unfortunately we cannot provide many details on the GSM chipset due to very tight [http://en.wikipedia.org/wiki/Non-disclosure_agreement NDA]s.  However, this is not neccessarily required, since it interfaces using a standard UART serial line with the [[Samsung S3C2442B B54]] or [[Samsung S3C2410]].  On that interface, [http://www.3gpp.org/ftp/Specs/archive/07_series/07.05/ GSM 07.05], [http://www.3gpp.org/ftp/Specs/archive/07_series/07.10/ GSM 07.10] and other standardized protocols are used.
+Unfortunately we cannot provide many details on the GSM chipset due to very tight [http://en.wikipedia.org/wiki/Non-disclosure_agreement NDA]s.  However, this is not neccessarily required, since it interfaces using a standard UART serial line with the [[Samsung S3C2442B B54]] or [[Samsung S3C2410]].  On that interface, [http://www.3gpp.org/ftp/Specs/archive/07_series/07.05/ GSM 07.05], [http://www.3gpp.org/ftp/Specs/archive/07_series/07.10/ GSM 07.10] and other standardized protocols are used. [[GTA01_gsm_modem]] provides a list of AT commands which are understood by the GSM modem.
 
 The NDAd documentation for the calypso, [http://cryptome.org/ti-calypso1.pdf register definition ] and [http://cryptome.org/ti-calypso2.pdf hardware definition ] was leaked onto a public forum on the 4th of March by persons or persons unknown.
 The legality of reading these files may vary according to your local laws, as may generating code from them.
