--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -27,6 +27,10 @@ Then start gpsd by:
 
   /etc/init.d/gpsd start
 
+If you get an error about no GPS device in /etc/default/gpsd execute:
+
+  echo "GPS_DEV=\"/dev/ttySAC1\"" > /etc/default/gpsd
+
 Now you must power up the GPS-chip by opening the "Settings" application and setting the GPS entry to "on". Now you can run tangoGPS and wait until it get's a GPS fix. This can take up to a few minutes.
 
 == Running TangoGPS on [[debian]] ==
