--- a/Users_Repositories.mw
+++ b/Users_Repositories.mw
@@ -1,5 +1,7 @@
 For information about the official downloads and distributions, see [[Downloads]]
 
+ Please note that adding feeds can [http://lists.openmoko.org/pipermail/support/2008-August/002227.html screw your system up].
+
 === Angstrom Repository ===
 
 Angstrong is the base distribution of Openmoko Linux distribution. It contains the basic set of Linux applications and they should be compatible with Openmoko. [http://www.angstrom-distribution.org/repo/ The repository package listing].
