--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -2101,6 +2101,11 @@ Due to common customs problems we created google group to discuss how to get tha
 | 1(P5.4)
 |
 |-
+| 27. [[Special:Emailuser/vertuos|vertuos]]
+| Vlad
+| 1 (точно точно куплю)
+|
+|-
 |Total number:
 |
 | 22(29?)
