--- a/Manually_using_GSM.mw
+++ b/Manually_using_GSM.mw
@@ -52,7 +52,7 @@ root@fic-gta01:~$ /etc/init.d/gsmd stop
 
 === Connecting to GSM Modem (using cu) ===
 
-If you don't have socat, you can use cu, although it has problems with file permissions and hardware flow control.
+If you don't have socat, you can use cu (part of the ''uucp'' package), although it has problems with file permissions and hardware flow control.
 
 * change permissions on ttySAC0
  root@fic-gta01:~$ chown uucp.uucp /dev/ttySAC0
