--- a/Stable_Hybrid_Release.mw
+++ b/Stable_Hybrid_Release.mw
@@ -45,26 +45,7 @@ The first pass at making the GTK software use the FSO will involve just creating
 We want to have a build that is stable, so we'll need some standard way of identifying the latest stable pieces of all the different software in the SHR, as well as a way to identify previous released versions of the SHR.
 
 == Interest ==
-Here's a list of people who've expressed an interest in working on the SHR.
-
-* [[User:Wurp|wurp2]]
-* [[User:Ferric|ferric]]
-* [[User:Paulproteus|paulproteus]]
-* [[User:Ainulindale|Ainulindale]]
-* [[User:jluis|Jose Luis]]
-* [[User:Kevin_Dean|Kevin Dean]]
-* [[User:Cb22|cb22]]
-* [[User:Jeremy-list|Jeremy List]]
-* mwester
-* [[User:MarcOChapeau|MarcO'Chapeau]]
-* [[User:kd8ikt|kd8ikt]]
-* [[User:Mywave|Mywave]]
-* [[User:nigelTheBold|Anthony Taylor]]
-* [[User:Pwgen|Eric Weiss]]
-* [[User:Andre613|Andre Racicot]]
-* [[User:Pyknite|Pyknite]]
-* [[User:write_erase|write_erase]]
-* [[User:Aleix|Aleix]]
+See the Developer Info on the upper right side of the [http://projects.openmoko.org/projects/shr SHR project page].
 
 == How to join ==
 * Please add your name (with a link to your user page) to the list above.
