/* How to join */

--- a/Stable_Hybrid_Release.mw
+++ b/Stable_Hybrid_Release.mw
@@ -48,8 +48,7 @@ We want to have a build that is stable, so we'll need some standard way of ident
 See the Developer Info on the upper right side of the [http://projects.openmoko.org/projects/shr SHR project page].
 
 == How to join ==
-* Please add your name (with a link to your user page) to the list above.
-* You should also send a request to join on the [http://projects.openmoko.org/projects/shr SHR project] on the OM projects page to join.
+* Send a request to join on the [http://projects.openmoko.org/projects/shr SHR project] on the OM projects page.
 * Join [http://lists.projects.openmoko.org/mailman/listinfo/shr-devel shr-devel@lists.projects.openmoko.org] and send an introductory email.
 
 The introductory email can just be a couple of lines if you like.  It should include what part would you want to work on, and any special knowledge you have that would relate to the project, e.g. if you are an OE guru or linux kernel geek, matchbox-window manager guru, etc.
