--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -1,4 +1,23 @@
 {{SHR}}
+= New way (using MokoMakefile) =
+Thanks to Aleix, There is a new (much simpler) way to build SHR that is under construction right now.
+
+=== First build ===
+* Install MokoMakefile
+* make setup
+* make shr-image
+
+=== Making changes ===
+* cd into the directory for the project you wish to change (e.g. openmoko-dialer3)
+* bitbake -c clean openmoko-dialer3
+* bitbake -c compile openmoko-dialer3
+* make shr-image
+
+=== Updating from other people's changes ===
+* svn update in the SHR root directory
+* make shr-image
+
+= Old way =
 == Building openmoko-dialer3 ==
 Currently this is the only package of any size being developed for SHR, and it's the only one with any instructions.  If you start another SHR project (please check with [[User:Wurp|Bobby]] before starting one), put instructions for working on the project here!
 
