/* New way (using MokoMakefile) */

--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -1,19 +1,25 @@
 {{SHR}}
-= New way (using MokoMakefile) =
-Thanks to Aleix, There is a new (much simpler) way to build SHR that is under construction right now.
+= New way (using FSO Makefile) =
+
+There is a new (much simpler) way to build SHR that is under construction right now.
 
 === First build ===
-* Install MokoMakefile
+
+* Install FSO Makefile
+* Apply this patch
 * make setup
+* cd shr-unstable
 * make shr-image
 
 === Making changes ===
+
 * cd into the directory for the project you wish to change (e.g. openmoko-dialer3)
 * bitbake -c clean openmoko-dialer3
 * bitbake -c compile openmoko-dialer3
 * make shr-image
 
 === Updating from other people's changes ===
+
 * svn update in the SHR root directory
 * make shr-image
 
