--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -5,11 +5,12 @@ There is a new (much simpler) way to build SHR that is under construction right 
 
 === First build ===
 
-* Install FSO Makefile
+* Download the FSO Makefile and common directory from [http://shr.bearstech.com/ Bearstech] (see README for details)
 * Apply this patch
-* make setup
-* cd shr-unstable
-* make shr-image
+
+ $ make setup
+ $ cd shr-unstable
+ $ make shr-image
 
 === Making changes ===
 
