--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -10,7 +10,7 @@ There is a new (much simpler) way to build SHR that is under construction right 
 
  $ make setup
  $ cd shr-unstable
- $ make shr-image
+ $ make image
 
 === Making changes ===
 
