--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -5,7 +5,7 @@ There is a new (much simpler) way to build SHR that is under construction right 
 
 === First build ===
 
-* Download the FSO Makefile and common directory from [http://shr.bearstech.com/ Bearstech] (see README for details)
+* Download the FSO Makefile and common directory from [http://shr.bearstech.com/ Bearstech] (see README for details).
 * Apply this patch
 
  $ make setup
