--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -14,10 +14,16 @@ There is a new (much simpler) way to build SHR that is under construction right 
 
 === Making changes ===
 
-* cd into the directory for the project you wish to change (e.g. openmoko-dialer3)
-* bitbake -c clean openmoko-dialer3
-* bitbake -c compile openmoko-dialer3
-* make shr-image
+Go into the directory for the project you wish to change (e.g. openmoko-dialer3) and make your changes.
+
+ $ cd shr-unstable
+ $ . setup-env  (only once per session)
+ $ bitbake -c clean openmoko-dialer3
+ $ bitbake -c compile openmoko-dialer3
+
+If you are satisfied with your changes and want to create a new SHR image:
+
+ $ make image
 
 === Updating from other people's changes ===
 
