/* Updating from other people's changes */

--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -27,8 +27,13 @@ If you are satisfied with your changes and want to create a new SHR image:
 
 === Updating from other people's changes ===
 
-* svn update in the SHR root directory
-* make shr-image
+Under the top directory:
+
+* make update-shr
+
+Or, under the SHR root directory:
+
+ $ svn update
 
 = Old way =
 == Building openmoko-dialer3 ==
