/* Updating from other people's changes */

--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -29,7 +29,7 @@ If you are satisfied with your changes and want to create a new SHR image:
 
 Under the top directory:
 
-* make update-shr
+ $ make update-shr
 
 Or, under the SHR root directory:
 
