/* Updating from other people's changes */

--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -31,7 +31,7 @@ Under the top directory:
 
  $ make update-shr
 
-Or, under the SHR root directory:
+Or under the SHR root directory:
 
  $ svn update
 
